--- a/package.json
+++ b/package.json
@@ -44,6 +44,15 @@
     ]
   },
   "devDependencies": {
-    "json-server": "^0.16.3"
+    "@types/jest": "^27.0.2",
+    "@types/react": "^17.0.34",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-modal": "^3.13.1",
+    "@types/react-native": "^0.66.2",
+    "@types/react-router-dom": "^5.3.2",
+    "@types/react-test-renderer": "^17.0.1",
+    "@types/styled-components": "^5.1.15",
+    "json-server": "^0.16.3",
+    "typescript": "^4.4.4"
   }
 }
